Add tank NPC